--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>randomizer</title> <!-- put your net art project title here -->
     <link rel="stylesheet" type="text/css" href="main.css">
+    <iframe src="https://editor.p5js.org/CharlesGraciano/embed/WWXihyIu"></iframe>
   </head>
       <body>
       <h3><a href="">page 2</a></h3>
