--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="column" id="controlsDiv">
       
-      <div class = "" id = "inputFeilds">
+      <div class = "" id = "inputFields">
       </div>
     
       <button type="button" id="addMoreButton">TURN IT TO 11!</button>
